source/error/20200005/23_error.txt
/home/yenoh/term_project_2/source/STD_DIR/20200005/23.c: In function ‘main’:
/home/yenoh/term_project_2/source/STD_DIR/20200005/23.c:18:19: warning: implicit declaration of function ‘open’; did you mean ‘popen’? [-Wimplicit-function-declaration]
   18 |         if((fd1 = open(fname_in, O_RDWR)) < 0){
      |                   ^~~~
      |                   popen
/home/yenoh/term_project_2/source/STD_DIR/20200005/23.c:18:34: error: ‘O_RDWR’ undeclared (first use in this function)
   18 |         if((fd1 = open(fname_in, O_RDWR)) < 0){
      |                                  ^~~~~~
/home/yenoh/term_project_2/source/STD_DIR/20200005/23.c:18:34: note: each undeclared identifier is reported only once for each function it appears in
/home/yenoh/term_project_2/source/STD_DIR/20200005/23.c:33:44: error: ‘O_CREAT’ undeclared (first use in this function)
   33 |         if((fd2 = open(fname_out, O_RDWR | O_CREAT, 0664)) < 0){
      |                                            ^~~~~~~
